# BioSpecML

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
src/: test.ipynb
src/biospecml/: preprocessing.py  visualisations.py
src/biospecml.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/biospecml/datasets/: PatchesDataset.py  TabularDataset.py  TabularMILDataset.py
src/biospecml/ml/: clustering.py  loss_functions.py  metrics.py  metrics_functions.py  ml.py  networks.py
src/biospecml/models/: CustomModels.py  LinearNet2.py  ResNetModel.py
src/biospecml/networks/: Conv1DNet.py  LinearNet.py  unet.py
src/biospecml/processings/: baseline_corrections.py  cheimg_processings.py  cheimg_projections.py  file_readers.py  image_processings.py  normalisations.py  processings.py  projections.py  registrations.py
src/biospecml/running_loops/: mil_loop.py
src/biospecml/training_loops/: train_loop.py  train_loop_v2.py  train_mil_loop.py  train_mil_loop_v2.py
src/biospecml/utils/: data_utils.py  dataset_utils.py  file_ops.py  memory_utils.py
src/biospecml/visualisations/: boxplot_dict.py  plotting_functions.py  wavenumbers_dict.py
src/preprocessing/: preprocessing.py
