[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'

[metadata]
name = "my-project"
version = "1.0.0"
description = "A sample project"
author = "Your Name"
author_email = "your.email@example.com"
license = "MIT"
keywords = ["sample", "project"]

[options]
python_requires = ">=3.6"

[tool.black]
line-length = 80
include = "\\.pyi?$"
